--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <h3>Experience</h3>
   <table cellspacing="10">
     <tr>
-      <td>02/2020- 08/2021</td>
+      <td>02/2020- Present</td>
       <td>Clinical Supervisor in Autism Learning Partners</td>
     </tr>
     <tr>
